[package]
name = "gadjid_python"
version = "0.0.1-rc.2"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "gadjid"
crate-type = ["cdylib"]

[dependencies]
gadjid = { path = "../gadjid" }
anyhow = "1.0"
numpy = "0.20"
pyo3 = { version = "0.20", features = ["abi3-py38", "anyhow"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
